; ModuleID = '/home/carl/AnghaBench/nginx/src/core/extr_ngx_regex.c_ngx_regex_pcre_jit.c'
source_filename = "/home/carl/AnghaBench/nginx/src/core/extr_ngx_regex.c_ngx_regex_pcre_jit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NGX_CONF_OK = common dso_local global i8* null, align 8
@NGX_LOG_WARN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [41 x i8] c"nginx was built without PCRE JIT support\00", align 1
@PCRE_CONFIG_JIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i8*, i8*)* @ngx_regex_pcre_jit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ngx_regex_pcre_jit(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i8*, i8** %7, align 8
  %10 = bitcast i8* %9 to i64*
  store i64* %10, i64** %8, align 8
  %11 = load i64*, i64** %8, align 8
  %12 = load i64, i64* %11, align 8
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %3
  %15 = load i8*, i8** @NGX_CONF_OK, align 8
  store i8* %15, i8** %4, align 8
  br label %22

16:                                               ; preds = %3
  %17 = load i32, i32* @NGX_LOG_WARN, align 4
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @ngx_conf_log_error(i32 %17, i32* %18, i32 0, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str, i64 0, i64 0))
  %20 = load i64*, i64** %8, align 8
  store i64 0, i64* %20, align 8
  %21 = load i8*, i8** @NGX_CONF_OK, align 8
  store i8* %21, i8** %4, align 8
  br label %22

22:                                               ; preds = %16, %14
  %23 = load i8*, i8** %4, align 8
  ret i8* %23
}

declare dso_local i32 @ngx_conf_log_error(i32, i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
